Fixing modal so correct data is shown (had to set isVisible back to false). Initial modal styling.

--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,7 @@ a:visited {
 .more-info {
   background-color: transparent;
   color: #fff;
-  border: 2px solid #ffc72e;
+  border: 2px solid #fff;
   border-radius: 10px;
   padding: 3px 10px;
   width: 50%;
@@ -139,14 +139,40 @@ a:visited {
 }
 
 .more-info:hover {
-  background-color: #ffc72e;
-  color: #740001;
+  background-color: #fff;
+  color: #000;
+}
+
+dialog {
+  position: fixed;
+  width: 500px;
+  height: 500px;
+  margin: auto;
+  padding: 0;
+}
+
+.modal-close {
+  background-color: transparent;
+  color: #fff;
+  border: none;
+}
+.modal-close:hover {
+  scale: 1.1;
 }
 
 /* Character Card Styles */
 .gryffindor {
   background-color: #740001;
   color: #ffc72e;
+}
+.gryffindor > .more-info {
+  border: 2px solid #ffc72e;
+  color: #ffc72e;
+}
+.gryffindor > .more-info:hover {
+  border: 1px solid #ffc72e;
+  background-color: #ffc72e;
+  color: #740001;
 }
 .hufflepuff {
   background-color: #ffd800;
@@ -165,9 +191,27 @@ a:visited {
   background-color: #0e1a40;
   color: #d4ac0d;
 }
+.ravenclaw > .more-info {
+  border: 1px solid #d4ac0d;
+  color: #d4ac0d;
+}
+.ravenclaw > .more-info:hover {
+  border: 1px solid #0e1a40;
+  background-color: #d4ac0d;
+  color: #0e1a40;
+}
 .slytherin {
   background-color: #1a472a;
   color: #fff;
+}
+.slytherin > .more-info {
+  border: 1px solid #fff;
+  color: #fff;
+}
+.slytherin > .more-info:hover {
+  border: 1px solid #fff;
+  background-color: #fff;
+  color: #1a472a;
 }
 .noHouseListed {
   background-color: #000;
